erDiagram
    AUTHOR {
        int id PK
        string name
    }
    BOOK {
        int id PK
        string title
        string isbn
        string description
        string publisher
        int publication_year
        string resource_type
        string signature
        string target_age_group
        int author_id FK
        int copies
        int total_copies
        int storage_copies
        int open_stack_copies
        datetime created_at
    }
    BOOK_COPY {
        int id PK
        int book_id FK
        string inventory_code
        string status
        string location
        string access_type
        string condition_state
        datetime created_at
        datetime updated_at
    }
    BOOK_DIGITAL_ASSET {
        int id PK
        int book_id FK
        string filename
        string mime_type
        int size_bytes
        datetime created_at
    }
    CATEGORY {
        int id PK
        string name
    }
    BOOK_CATEGORY {
        int book_id PK,FK
        int category_id PK,FK
    }
    APP_USER {
        int id PK
        string email
        string name
        string roles
        string password
        string phone_number
        string address_line
        string city
        string postal_code
        bool blocked
        string blocked_reason
        bool verified
        bool pending_approval
        string membership_group
        int loan_limit
        datetime privacy_consent_at
        datetime created_at
        datetime updated_at
    }
    LOAN {
        int id PK
        int book_id FK
        int book_copy_id FK NULLABLE
        int user_id
        datetime borrowed_at
        datetime due_at
        datetime returned_at
        int extensions_count
        datetime last_extended_at
    }
    %% separator
    RESERVATION {
        int id PK
        int book_id FK
        int book_copy_id FK NULLABLE
        int user_id FK
        string status
        datetime reserved_at
        datetime expires_at
        datetime fulfilled_at
        datetime cancelled_at
    }
    %% separator
    FINE {
        int id PK
        int loan_id FK
        float amount
        string currency
        string reason
        datetime created_at
        datetime paid_at
    }
    %% separator
    NOTIFICATION_LOG {
        int id PK
        int user_id FK NULLABLE
        int loan_id FK NULLABLE
        int reservation_id FK NULLABLE
        string type
        string fingerprint
        string channel
        datetime created_at
        datetime sent_at
    }

    REGISTRATION_TOKEN {
        int id PK
        int user_id
        string token
        datetime expires_at
        datetime used_at
        datetime created_at
    }

    AUTHOR ||--o{ BOOK : "pisze"
    BOOK o{--o{ CATEGORY : "przynależy"
    BOOK ||--o{ BOOK_COPY : "ma egz."
    BOOK ||--o{ BOOK_DIGITAL_ASSET : "pliki"
    BOOK_COPY |o..o{ LOAN : "wypożyczenia"
    APP_USER ||--o{ LOAN : "wypożycza"
    BOOK ||--o{ RESERVATION : "rezerwacje"
    BOOK_COPY |o..o{ RESERVATION : "egzemplarz"
    APP_USER ||--o{ RESERVATION : "składa"
    LOAN ||--o{ FINE : "generuje kary"
    APP_USER ||--o{ NOTIFICATION_LOG : "powiadomienia"
    LOAN ||--o{ NOTIFICATION_LOG : "dot. wypożyczeń"
    RESERVATION ||--o{ NOTIFICATION_LOG : "dot. rezerwacji"
    APP_USER ||--o{ REGISTRATION_TOKEN : "tokeny"
